-- Release 0.0.10 --

2002-10-13   Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Updated version to 0.0.10

2002-10-11  Anders Eriksson  <anders@umunet.org>

	* configure.in, acconfig.h, src/gerbv.c: Added configure-option
	  to change default unit for status bar to millimeters instead
	  of the built-in default of mils.

2002-10-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: The undefined aperture fix below is, in princip,
	  only valid if aperture type != from aperture macro.

2002-10-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: If aperture was undefined (as in polygon outline)
	  it caused a segfault in min-max routine. Closes bug #619652.

	* man/gerbv.1.in: Added blurb about the new command line 
	  switches. Also added some text on backends.

	* src/gerbv.c: Added some GDK/GTK specific command line
	  parameters. Also added the parameter --geometry.
	  Currently ignoring placement parameters, though I parse them

2002-10-06  Anders Eriksson  <anders@umunet.org>

	* src/gerbv_screen.h, src/gerbv.c: Added menu selection for
	  units. Decreased width of status bar. This closes the too
	  wide window problem in bug #615475. The default minimum
	  height is still too high to fit in an 800x600 display.
	  By limiting the number of files to 17 or so this problem
	  is also solved.

2002-09-29  Anders Eriksson  <anders@umunet.org>

	* src/gerber.c, src/gerbv.c, src/gerbv_screen.h: Removed last
	  traces of IMG_EXTRA hack. Now using proper aperture width to
	  increase width of bounding box. This may give slightly too
	  big bbox, but it is better than before. I consider this to
	  close bug #605985.

2002-09-17  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: exportpng is configured in default and removed
	  if asked (--disable-exportpng).
	* configure.in, acconfig.h, src/gerbv_screen.h: Setting of MAX_FILES
	  from ./configure.
	

2002-09-09  Stefan Petersen  <spe@stacken.kth.se>
